--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
-        "pg": "^8.11.5"
+        "pg": "^8.11.5",
+        "uuid": "^9.0.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
