--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "recharts": "^3.6.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
