--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@radix-ui/react-select": "^2.2.6",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
